# batch-ai-imager-remote-access-v1.4

./: CHANGELOG.md  README.md  package-lock.json
batch-ai-imager+remote-access/: README.md  app.py  clustering_page.py  comparison_page.py  comparison_tool.py  create_zip.py  custom_styles.css  dashboard_page.py  database.py  download_code.py  download_export.py  download_zip.py  explain_code.md  export_utils.py  history_page.py  image_clustering.py  image_processor.py  onboarding_tour.py  package_requirements.txt  pyproject.toml  replit.nix  requirements.txt  search_page.py  utils.py
batch-ai-imager+remote-access/attached_assets/: App.tsx
batch-ai-imager+remote-access/project_files/: README.md  app.py  data_flow_diagram.txt  database.py  history_page.py  image_processor.py  package_requirements.txt  project_plan.md  search_page.py  setup_instructions.txt  utils.py
client/: .env  .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  tailwind.config.js  windsurf_deployment.yaml
client/public/: index.html
client/src/: AlertHistoryExport.tsx  AlertHistoryWidget.tsx  AlphaVantageChart.tsx  AlphaVantageWidget.tsx  AnalyticsDashboard.tsx  App.test.tsx  App.tsx  CoinGeckoChart.tsx  CoinGeckoWidget.tsx  CumulativeSumPage.tsx  MLModelsInfo.tsx  MemeCoinScreener.tsx  PriceAlertsWidget.test.tsx  PriceAlertsWidget.tsx  SentimentScanner.tsx  TradingViewPage.tsx  VisualIndicatorsWidget.tsx  index.css  index.tsx
server/: .env  README.md  debug-simple.html  package-lock.json  package.json  test-websocket.html  test_api_auth.sh  tsconfig.json
(+44 files in other folders)
